2011-03-30  Ryan S. Arnold  <rsa@us.ibm.com>

	* sysdeps/powerpc/powerpc32/power6/fpu/Makefile (ASFLAGS): Remove
	HAVE_ASM_PPC_REL16 as it is no longer needed since we no longer
	support building the power[6|7] optimized libdfp with -mbss-plt.
	* sysdeps/powerpc/powerpc32/power6/fpu/floatunsdisd.S: Remove
	HAVE_ASM_PPC_REL16 guard and remove the bss-plt form of GOT access.
	We no longer support building the power[6|7] optimized libdfp with
	-mbss-plt.
	* sysdeps/powerpc/powerpc32/power6/fpu/fixunssddi.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/fixunsdddi.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/fixunstddi.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/floatunsdidd.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/floatunsditd.S: Likewise.

2011-03-30  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated.

2011-03-30  Andreas Schwab  <schwab@redhat.com>

	* Makefile.in: Added $(CFLAGS) to .S.o: rules.
	* configure.ac: Added -DSHARED to picflag in order to enforce PIC when
	compiling hand rolled asm functions.
	* sysdeps/powerpc/powerpc32/power6/fpu/Makefile: Added
	-DHAVE_ASM_PPC_REL16 to ASFLAGS in order to enforce secure-plt
	style GOT access.

2011-03-30  Ryan S. Arnold  <rsa@us.ibm.com>

	* sysdeps/s390/dfpu/fe_decround.c (__init_printf_dfp_getround): Added
	function definition for callback and added callback pointer.  The
	printf_dfp () function was graciously skipping over the rounding mode
	modifiers due to this missing definition.
	* README.developer: Updated compatibility matrix to put x86 and x86_64
	under TODO.  Changed all instances of at05 to at4.0.

2011-03-30  Andreas Schwab  <schwab@redhat.com>

	* fe_decround.c (__init_printf_dfp_getround): Remove unnecessary
	prototype and declare constructor 'static.  Remove unnecessary
	hidden_def(__init_printf_dfp_getround).
	* sysdeps/powerpc/dfpu/fe_decround.c (__init_printf_dfp_getround):
	Remove unnecessary prototype and declare constructor 'static.  Remove